--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.0",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.0",
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
     "@angular/forms": "~9.1.0",
+    "@angular/material": "^9.2.4",
+    "@angular/material-moment-adapter": "^9.2.4",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "bootstrap": "^4.0.0-beta.2",
     "jquery": "^3.4.1",
+    "moment": "^2.26.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "sweetalert2": "^9.10.10",
